--- a/writing_functions.Rmd
+++ b/writing_functions.Rmd
@@ -79,24 +79,144 @@ z_scores("my name is Mukta")
 Compute and return mean and SD of a numeric vector
 
 ```{r}
-mean_and_sd = function() {
+mean_and_sd = function(x) {
   
   if (!is.numeric(x)) {
-    stop("The input x should be numeric")
-  }
+    stop("Argument x should be numeric")
+  } 
   
   if (length(x) < 5) {
     stop("Only compute z scores when the input has 5 or more numbers")
   }
   
-  
-  mean_x = mean(x, na.rm = TRUE)
-  sd_x = sd(x, na.rm = TRUE)
-  
+  mean_x = mean(x)
+  sd_x = sd(x)
+
   tibble(
-    mean - mean_x,
+    mean = mean_x, 
     sd = sd_x
   )
+}
+
+mean_and_sd(x_vec)
+```
+
+Simulation
+
+```{r}
+sim_df =
+  tibble(x = rnorm(n = 30, mean = 3, sd = 2))
+
+sim_df %>% 
+  summarize(
+    mu_hat = mean(x),
+    sigma_hat = sd(x)
+  )
+```
+
+Write a function to do simulations
+
+```{r}
+sim_mean_and_sd = function(n_subj = 30, mu = 3, sigma = 2) {
+  
+    sim_df =
+      tibble(
+        x = rnorm(n = n_subj, mean = mu, sd = sigma)
+        )
+    
+    sim_df %>% 
+      summarize(
+        mu_hat = mean(x),
+        sigma_hat = sd(x)
+      )
+  
+
+}
+```
+
+Let's run this function. This is providing a named argument.
+
+```{r}
+sim_mean_and_sd(n_subj = 50)
+```
+
+What if you just put "50"? By default, it assigns the value to the first argument.
+
+```{r}
+sim_mean_and_sd(50)
+```
+
+Import LoTR data
+
+```{r}
+fellowship_ring =
+  read_excel("data/LotR_Words.xlsx", range = "B3:D6") %>% 
+  mutate(movie = "Fellowship of the Ring")
+
+two_towers =
+  read_excel("data/LotR_Words.xlsx", range = "F3:H6") %>% 
+  mutate(movie = "Two Towers")
+
+return_of_the_king =
+  read_excel("data/LotR_Words.xlsx", range = "J3:L6") %>% 
+  mutate(movie = "Return of the King")
+
+lotr_df =
+  bind_rows(fellowship_ring, two_towers, return_of_the_king) %>% 
+  janitor::clean_names() %>% 
+  pivot_longer(
+    female:male,
+    names_to = "sex",
+    values_to = "words")  %>%  
+  mutate(race = str_to_lower(race)) %>%  
+  select(movie, everything()) 
+```
+
+Turn this into a function
+
+```{r}
+lotr_import = function(cell_range, movie_title) {
+  
+  df =
+    read_excel("data/LotR_Words.xlsx", range = cell_range) %>%
+    mutate(movie = movie_title)
+  
+  df
+  
+}
+
+fellowship = lotr_import(cell_range = "B3:D6", movie_title = "Fellowship")
+two_tower = lotr_import(cell_range = "F3:H6", movie_title = "Two Towers")
+return = lotr_import(cell_range = "J3:L6", movie_title = "Return of the King")
+
+bind_rows(fellowship, two_towers, return)
+```
+
+Look at one more example
+
+```{r}
+nsduh_table <- function(html, table_num, table_name) {
+  
+  table = 
+    html |> 
+    html_table() |> 
+    nth(table_num) |>
+    slice(-1) |> 
+    select(-contains("P Value")) |>
+    pivot_longer(
+      -State,
+      names_to = "age_year", 
+      values_to = "percent") |>
+    separate(age_year, into = c("age", "year"), sep = "\\(") |>
+    mutate(
+      year = str_replace(year, "\\)", ""),
+      percent = str_replace(percent, "[a-c]$", ""),
+      percent = as.numeric(percent),
+      name = table_name) |>
+    filter(!(State %in% c("Total U.S.", "Northeast", "Midwest", "South", "West")))
+  
+  table
+  
 }
 ```
 
