--- a/writing_functions.Rmd
+++ b/writing_functions.Rmd
@@ -116,22 +116,10 @@ sim_df %>%
 
 Write a function to do simulations
 
-```{r}
-sim_mean_and_sd = function(n_subj = 30, mu = 3, sigma = 2) {
-  
-    sim_df =
-      tibble(
-        x = rnorm(n = n_subj, mean = mu, sd = sigma)
-        )
-    
-    sim_df %>% 
-      summarize(
-        mu_hat = mean(x),
-        sigma_hat = sd(x)
-      )
-  
+(We wrote this code chunk last time, now it's being sourced.)
 
-}
+```{r}
+source("source/sim_mean_sd.R")
 ```
 
 Let's run this function. This is providing a named argument.
