simple linear regression + bday problem

--- a/simulation.Rmd
+++ b/simulation.Rmd
@@ -41,7 +41,7 @@ We can "simulate" by running our function
 sim_mean_and_sd(n_subj = 400)
 ```
 
-can.i "verify" CLT?
+can i "verify" CLT?
 
 ```{r}
 output = vector("list", length = 100)
@@ -79,7 +79,7 @@ sim_results_df %>%
     sample_size = str_c("n = ", sample_size),
     sample_size = fct_inorder(sample_size)
   ) %>% 
-  ggplot(aes(x = sample_size, y = mu_hat)) +
+  ggplot(aes(x = sample_size, y = mu_hat, fill = sample_size)) +
   geom_violin()
 ```
 
@@ -92,5 +92,139 @@ sim_results_df %>%
     emp_mean = mean(mu_hat),
     emp_se = sd(mu_hat)
   )
+```
+
+## Simple linear regression
+
+```{r}
+sim_df =
+  tibble(
+    x = rnorm(30, mean = 1, sd = 1),
+    y = 2 +3 * x + rnorm(30, 0, 1)
+  )
+
+sim_df %>% 
+  ggplot(aes(x = x, y = y)) +
+  geom_point()
+
+slr_fit = lm(y ~ x, data = sim_df)
+
+coef(slr_fit)
+```
+
+turn this into a function
+
+```{r}
+sim_regression = function (n_subj, beta_0 = 2, beta_1 = 3) {
+  
+  sim_df =
+    tibble(
+      x = rnorm(n_subj, mean = 1, sd = 1),
+      y = beta_0 + beta_1 * x + rnorm(n_subj, 0, 1)
+      )
+  
+  slr_fit = lm(y ~ x, data = sim_df)
+  
+  tibble(
+    beta0_hat = coef(slr_fit)[1],
+    beta1_hat = coef(slr_fit)[2]
+  )
+  
+}
+```
+
+```{r}
+sim_regression(n_subj = 30)
+```
+
+For loop
+
+```{r}
+output = vector("list", length = 500)
+
+for (i in 1:500) {
+  output[[i]] = sim_regression(n_subj = 30)
+}
+
+output %>% 
+  bind_rows()
+
+```
+
+iterations with regression
+
+```{r}
+slr_sim_results_df =
+  expand_grid(
+    sample_size = 30,
+    iter = 1:500
+  ) %>% 
+  mutate(
+    results = map(sample_size, sim_regression)
+  ) %>% 
+  unnest(results)
+
+slr_sim_results_df %>% 
+  ggplot(aes(x = beta0_hat, y = beta1_hat)) +
+  geom_point()
+```
+
+## birthday problem example
+
+```{r}
+birthdays = sample(1:365, 5, replace = TRUE)
+
+# if number of unique birthdays is less than or equal to 5
+repeated_bday = length(unique(birthdays)) < 5
+
+repeated_bday
+
+```
+
+put this in a function
+
+```{r}
+bday_sim = function(n_room) {
+  
+    birthdays = sample(1:365, n_room, replace = TRUE)
+    
+    repeated_bday = length(unique(birthdays)) < n_room
+    
+    repeated_bday
+  }
+```
+
+```{r}
+bday_sim(20)
+```
+
+```{r}
+bday_sim_results =
+  expand_grid(
+    bdays = 5:50,
+    iter = 1:2500
+  ) %>% 
+  mutate(
+    results = map_lgl(bdays, bday_sim)
+  ) %>% 
+  group_by(
+    bdays
+  ) %>% 
+  summarize(
+    prob_repeat = mean(results)
+  )
+```
+
+plot
+
+```{r}
+bday_sim_results %>% 
+  ggplot(aes(x = bdays, y = prob_repeat)) +
+  geom_point(color = "red") +
+  geom_line()
+
+# very jagged bc we only repeated it 50 times. maybe if we had more iterations it would be smoother. when i change code so that iter = 1:2500, it's less jagged
+
+
 ```
 
